Changelog for Collections.

- Added system setting to modify image path in image renderer
- Allow children under Selections
- Added an option to add quip column
- Fixed selecting templates in Collection view in Revo 2.2.x
- Added option to set default values for hidemenu,published,cacheable,searchable and richtext for new children
- Added option to specify sortby for Selections Resource search query
- Added option to set label for Back to Collection/Selection button
- Fixed displaying selection grid with TVs
- Pass whole row to snippet renderer
- Fixed sorting by TV with dash in name

Collections 3.0.2
===================
- Fixed saving Collections view from Resource's settings tab
- Link Resource to Selection can be done by searching ID
- Fixed passing sort dir int uppercase format to getSelections
- Removed parents option from getSelections call

Collections 3.0.1
===================
- Fixed update from grid

Collections 3.0.0
===================
- Added validation for column name if contains a dot
- Added PHP renderer (snippet) that will be used for a column
- Added view option to define Resource Classes that will be available in resource type select
- Added view option to define context menu items
- Added view option to define buttons and their style
- Fixed saving view options from not-activated tab
- Changed default tree icon for Collections in Revo 2.3
- Added getSelections snippet (works with getPage, getCache, etc.)
- Updated view of Collection's settings tab
- Updated Collections view
- Added CRC for Selections
- Added back button to Collection's children and revert close button to original functionality
- Fire OnBeforeEmptyTrash and OnEmptyTrash when removing Resource via Collections

Collections 2.2.2
===================
- Fixed rendering TV and Tagger columns with dash in name/alias

Collections 2.2.1
===================
- Fixed PHP 5.2 compatibility

Collections 2.2.0
===================
- Added an option to set position of Content field