@@ -119,6 +119,7 @@ $_lang['collections.template.child_published'] = 'Default children\'s published'
 $_lang['collections.template.child_cacheable'] = 'Default children\'s cacheable';
 $_lang['collections.template.child_searchable'] = 'Default children\'s searchable';
 $_lang['collections.template.child_richtext'] = 'Default children\'s richtext';
+$_lang['collections.template.child_content_type'] = 'Default children\'s content type';
 
 $_lang['collections.template.column.none'] = 'This view doesn\'t have columns yet.';
 $_lang['collections.template.column.name'] = 'Name';
