@@ -45,6 +45,7 @@
         <field key="child_cacheable" dbtype="int" precision="1" phptype="boolean" null="true" />
         <field key="child_searchable" dbtype="int" precision="1" phptype="boolean" null="true" />
         <field key="child_richtext" dbtype="int" precision="1" phptype="boolean" null="true" />
+        <field key="child_content_type" dbtype="int" precision="10" phptype="integer" null="false" default="0" />
 
         <aggregate alias="Setting" class="CollectionSetting" local="id" foreign="template" cardinality="one" owner="local" />
         <composite alias="Columns" class="CollectionTemplateColumn" local="id" foreign="template" cardinality="many" owner="local" />
